# omtp_course

./: .gitignore  CHANGELOG.md  README.md  ros2_differences.md
abb_irb6640_support/: CMakeLists.txt  package.xml
abb_irb6640_support/urdf/: irb6640_185_280_macro.xacro
assignment_1/: README.md
assignment_1/omtp_modified/urdf/: omtp_factory_modified.xacro
assignment_1/urdf_tutorial/: package.xml
assignment_1/urdf_tutorial/urdf/: r2d2.urdf
assignment_2/: README.md
assignment_2/omtp_lecture5/: package.xml
assignment_2/omtp_lecture5/scripts/: lecture5_assignment2_script  lecture5_assignment3.py
assignment_2/omtp_moveit_config/: .setup_assistant
kinova_description/: CMakeLists.txt  package.xml
kinova_description/urdf/: kinova_common.xacro
lecture_1/: README.md
lecture_1/omtp_modified/: CMakeLists.txt  package.xml
lecture_1/omtp_modified/launch/: display.launch
lecture_1/urdf_tutorial/: CMakeLists.txt
lecture_1/urdf_tutorial/launch/: display.launch
lecture_5/: README.md
lecture_5/omtp_lecture5/: CMakeLists.txt
lecture_5/omtp_lecture5/scripts/: lecture5_assignment3.py
lecture_5/omtp_moveit_config/: package.xml
lecture_5/omtp_moveit_config/config/: omtp.srdf
lecture_6/: README.md  lecture6_assignment1_symlink.world
lecture_6/omtp_gazebo_symlink/: lecture6_assignment1.world  logical_camera1_model.sdf  logical_camera2_model.sdf
lecture_6/omtp_lecture6/: CMakeLists.txt
lecture_6/omtp_lecture6/launch/: lecture6_assignment4.launch
lecture_6/omtp_lecture6/scripts/: lecture6_assignment3.py  lecture6_assignment4.py
lecture_7/: README.md
lecture_7/lecture_7_behaviors/: README.md
lecture_7/lecture_7_behaviors/lecture_7_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
lecture_7/lecture_7_behaviors/lecture_7_flexbe_behaviors/manifest/: example_behavior.xml  omtp_conveyor_pick_place.xml
lecture_7/lecture_7_behaviors/lecture_7_flexbe_behaviors/src/lecture_7_flexbe_behaviors/: omtp_conveyor_pick_place_sm.py
lecture_7/lecture_7_behaviors/lecture_7_flexbe_states/: CMakeLists.txt  package.xml  setup.py
lecture_8/: README.md
lecture_9/: README.md  cartpole.py  catpole.py
lecture_9/a2c_cartpole_tensorboard/ACKTR_1/: events.out.tfevents.1591285115.T470s
lecture_9/cartpole_tensorboard/ACKTR_7/: events.out.tfevents.1591298151.T470s
omtp_lecture1/: CMakeLists.txt  package.xml
omtp_lecture1/launch/: omtp_factory.launch.py  r2d2.launch.py
omtp_lecture1/urdf/: omtp_factory_modified.xacro
omtp_support/: CMakeLists.txt  package.xml
omtp_support/urdf/: omtp_factory.xacro
omtp_support/urdf/vacuum_gripper/: vacuum_gripper.urdf.xacro
omtp_support/urdf/workcell/: workcell.urdf.xacro
resources/: README.md
resources/omtp_gazebo/: CMakeLists.txt
resources/omtp_gazebo/config/: conveyor_object.yaml
resources/omtp_gazebo/models/logical_camera1/: model.sdf
resources/omtp_gazebo/models/logical_camera2/: model.sdf
resources/omtp_gazebo/worlds/: lecture6_assignment1.world
resources/omtp_support/: CMakeLists.txt
resources/omtp_utilities/: CMakeLists.txt
ur_description/: CMakeLists.txt  package.xml
ur_description/urdf/: ur10.urdf.xacro  ur3.urdf.xacro  ur5.urdf.xacro
urdf_tutorial/: CMakeLists.txt  package.xml
urdf_tutorial/launch/: tutorial.py
urdf_tutorial/urdf/: 05-visual.urdf  r2d2.urdf
