<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_irb6640_support</name>
  <version>2.0.0</version>
  <description>
      3D model of various ABB IRB6640, ported to ROS2.
      Includes the model and URDF files for working with an arm in RViz or Gazebo.
  </description>
  <maintainer email="aorsul16@student.aau.dk">Andrej Orsula</maintainer>
  <author>Dan Solomon (Southwest Research Institute)</author>
  <author>Andrej Orsula</author>
  <author>Asger Printz Madsen</author>
  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
