<package>
  <name>urdf_tutorial</name>
  <version>0.1.0</version>
  <description>
      URDF assignment for AAU OMTP (ROB8) Lecture 1.
  </description>
  <maintainer email="aorsul16@student.aau.dk">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <author>Asger Printz Madsen</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
