<?xml version="1.0"?>
<package format="2">
  <name>omtp_modified</name>
  <version>0.1.0</version>
  <description>
      Assignment for AAU OMTP (ROB8) Lecture 1.
  </description>
  <maintainer email="aorsul16@student.aau.dk">Andrej Orsula</maintainer>
  <author>Andrej Orsula</author>
  <author>Asger Printz Madsen</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>ur_description</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>ur_description</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>abb</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
